--- a/style.css
+++ b/style.css
@@ -156,3 +156,11 @@ body {
   opacity: 1;
 }
 
+form .button input {
+  width: 8em;
+  height: 2.5em;
+  font-weight: bold;
+  /*background-color: #4977D1;*/
+  color: #ffffff;
+  border: none;
+}
